--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "raf": "3.3.2",
     "react": "15.6.1",
     "react-addons-shallow-compare": "^15.6.2",
@@ -42,10 +43,10 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "jest": "^23.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "jest": "^23.2.0",
     "react-test-renderer": "^16.4.1",
     "webpack-dev-server": "2.5.1"
   }
